made photo gallery blurred until hovered over, tried fixing flex on hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 *, *:before, *:after {
-  box-sizing: inherit;
+  box-sizing: inherit; 
+  font-family: 'poppins';
 }
 
 
 html, body {
-  font-family: Verdana,sans-serif;
+ 
   font-size: 15px;
   line-height: 1.5;
 }
@@ -46,20 +47,23 @@ html {
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/IMG_3693.jpg");
-  height: 350px;
-  width: 100%;
-  background-position: center;
+  height: 300px;
+  align-self: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
+  background-attachment: fixed;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .hero-text {
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  
+ 
+
   color: white;
   font-size: 120%;
 }
@@ -69,6 +73,7 @@ html {
   vertical-align: middle;
   width: 300px;
   border: lightpink 10px solid;
+  filter: blur(8px);
 }
 
 .column {
@@ -77,6 +82,12 @@ html {
   white-space: nowrap;
   padding: 10px;
 }
+
+
+.joan:hover{
+  filter: blur(0px);
+}
+
 
 .About-Me,
 .Work,
@@ -109,4 +120,94 @@ html {
 
 .Contact-Me h1 {
   background-color: rosybrown;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-linkedin {
+  background: dodgerblue;
+  color: white;
+}
+
+.fa-github {
+  background: dimgrey;
+  color: white;
+}
+
+.email{
+  color: black;
+}
+
+
+@media (min-width: 500px) {
+  .hero-image {
+    background: url(../images/IMG_3693.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+}
+@media (min-width: 800px) {
+  .hero-image {
+    background: url(../images/IMG_3693.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+}
+
+@media (max-width: 499px) {
+  .hero-image {
+    background: url(../images/IMG_3693.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+  
+  }
+  
+}
+
+@media (min-width: 500px) {
+  .hero-text {
+    background-size: 100%;
+    background-repeat: no-repeat;
+  
+  }
+
+}
+
+@media (min-width: 800pxpx) {
+  .hero-text {
+    background-size: 100%;
+    background-repeat: no-repeat;
+  
+  }
+
+}
+
+@media (max-width: 320px) {
+  .hero-image,
+  .hero-text,
+  .About-Me p,
+  .About-Me h1,
+  .Work p,
+  .Work h1,
+  .Contact-Me h1,
+  .navbar a,
+  .navbar .active {
+    width: 50%;
+
+  }
+
+}
+
+@font-face {
+  font-family: 'poppins';
+  src: url('https://fonts.google.com/specimen/Poppins');
 }
